# borsh-rs

./: Cargo.toml  README.md
borsh/: Cargo.toml
borsh-derive/: Cargo.toml
borsh-derive-internal/: Cargo.toml
borsh-derive-internal/src/: enum_de.rs  enum_discriminant_map.rs  enum_ser.rs
borsh-derive/src/: attribute_helpers.rs  enum_de.rs  enum_schema.rs  enum_ser.rs  helpers.rs  lib.rs  struct_de.rs  struct_schema.rs
borsh/tests/: test_de_errors.rs  test_simple_structs.rs  test_simple_structs_without_discriminant_support.rs
