[package]
name = "borsh-derive"
version.workspace = true
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
categories = ["encoding", "network-programming"]
repository = "https://github.com/nearprotocol/borsh"
homepage = "https://borsh.io"
description = """
Binary Object Representation Serializer for Hashing
"""

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "fold"] }
proc-macro-crate = "1"
proc-macro2 = "1"
quote = "1"


[dev-dependencies]
pretty_assertions = "1.1.0"
